overflow fixed

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -265,6 +265,7 @@ form{
     z-index: 99;
     justify-content: flex-start;
     top: 50px;
+    overflow-y: scroll;
 }
 #modalBack{
     display:none;
